chore(api):[TRI-1138] [SUPPLY_CHAIN_ACT] Implement ESS Incident SubmodelServer on Tier Level - fix sonar findings